# album_cleaner

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
src/application/application/interfaces/: file_repository.py
src/application/application/use_cases/: cleaner_service.py
src/application/dtos/: __init__.py  processing.py
src/application/interfaces/: __init__.py
src/application/interfaces/repositories/: file_repository_interface.py
src/application/interfaces/services/: llm_service_interface.py  prompt_loading_service_interface.py  quality_assurance_service_interface.py  song_name_service_interface.py
src/application/services/: cleaner_service.py  llm_service_interface.py  prompt_loading_service_interface.py
src/application/use_cases/: album_cleaner_use_case.py  cleaner_service.py
src/domain/domain/entities/: models.py
src/domain/entities/: album.py  file.py  models.py  track.py
src/domain/values_objects/: __init__.py  language.py
src/infrastructure/config/: settings.py
src/infrastructure/factories/: service_factory.py
src/infrastructure/logging/: logger.py
src/infrastructure/persistence/: file_repository.py
src/infrastructure/utils/: __init__.py  file_utils.py
src/presentation/: app.py  cli.py
src/presentation/presentation/: cli.py  gui.py
src/prompts/: cleaner_prompt.yaml  quality_assurance_prompt.yaml  search_terms_prompt.yaml
src/tests/: test_architecture.py  test_fallback.py  test_integration.py
src/tests/notebook/: directory_cleaner.ipynb  spotify_api.ipynb
src/tests/tests/: test_cleaner.py
(+23 files in other folders)
